--- a/app/static/css/intro.css
+++ b/app/static/css/intro.css
@@ -1,3 +1,79 @@
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.intro {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #94b6ff;
+}
+
+.intro-img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-90%);
+  width: 20%;
+  height: auto;
+  font-size: 20px;
+}
+
+.intro-head {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.intro-text {
+  position: relative;
+  left: 50%;
+  top: 60%;
+  transform: translateX(-50%) translateY(-10%);
+  text-align: center;
+}
+
+.intro-next {
+  position: absolute;
+  top: 90%;
+  right: 2%;
+  text-align: center;
+  width: auto;
+  height: auto;
+  background-color: #2fa929;
+  cursor: pointer;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.intro-prev {
+  position: absolute;
+  top: 90%;
+  left: 2%;
+  text-align: center;
+  width: auto;
+  height: auto;
+  background-color: #e53d32;
+  cursor: pointer;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
 #disp1 {
   display: block;
 }
