--- a/app/static/css/intro.css
+++ b/app/static/css/intro.css
@@ -12,7 +12,7 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #94b6ff;
+  background-color: #5461ff;
 }
 
 .intro-img {
@@ -84,4 +84,31 @@ body {
 
 #disp3 {
   display: none;
+}
+
+#userForm {
+  display: none;
+}
+
+#dots {
+  position: relative;
+  left: 50%;
+  top: 90%;
+  transform: translateX(-50%) translateY(-10%);
+  text-align: center;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #94b6ff;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #566a95;
 }
