--- a/app/static/css/intro.css
+++ b/app/static/css/intro.css
@@ -86,8 +86,38 @@ body {
   display: none;
 }
 
+.user {
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 #userForm {
   display: none;
+}
+
+input#username {
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 2px solid red;
+}
+
+#finish {
+  text-align: center;
+  width: auto;
+  height: auto;
+  background-color: #bf71e5;
+  cursor: pointer;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 #dots {
